sweet alert for buying

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -31,7 +31,7 @@
 
 <%= javascript_pack_tag "dashboard" %>
 <% if params[:redirect_success] == "true" %>
-  <%= javascript_pack_tag "sweet-alert" %>
+  <%= javascript_pack_tag "sweet-alert-buy" %>
 <% end %>
 
 
