added expired to watchlist and changed margin on price

--- a/app/views/pages/_dashboard-listings.html.erb
+++ b/app/views/pages/_dashboard-listings.html.erb
@@ -25,7 +25,7 @@
               <div class="dashboard-left">
                 <div class="dashboard-left-container">
                   <div>
-                    <p class='posted-on-text'>Posted on <%=ticket.created_at.to_date.strftime('%d %b')%> </p>
+                    <p class='posted-on-text'>Posted on <strong><%=ticket.created_at.to_date.strftime('%d %b')%></strong> </p>
                   </div>
                 </div>
               </div>
