--- a/app/assets/stylesheets/components/_event_listings.scss
+++ b/app/assets/stylesheets/components/_event_listings.scss
@@ -112,7 +112,7 @@
 
 @media (max-width: 767px) {
   .event-link-to-show-page p:first-child{
-    font-size: 14px;
+    font-size: 12px;
   }
 }
 .event-details{
@@ -140,7 +140,7 @@
   border-right: 0.5px solid #CFD4D9;
 }
 .event-price{
-  min-width: 90px;
+  min-width: 80px;
   padding-right: 10px;
   vertical-align: top;
   font-size: 12px;
@@ -166,6 +166,12 @@
   margin-top: 20px;
   font-size: 14px;
 }
+@media (max-width: 768px) {
+  .sold-out-text{
+    font-size: 12px;
+  }
+}
+
 .buy-sell-tickets-header{
   color: $dark-gray;
 }
@@ -191,7 +197,7 @@
 }
 @media (max-width: 767px){
   .event-category-box{
-    font-size: 8px;
+    font-size: 6px;
     padding-top: 2px;
   }
   .event-price .price{
