--- a/app/views/pages/_dashboard-watching.html.erb
+++ b/app/views/pages/_dashboard-watching.html.erb
@@ -41,10 +41,9 @@
 
               </div>
 
-
               <div class="dashboard-price">
                 <div class="cop-it">
-                  <% if watch.event.quantity <= 0 %>
+                  <% if watch.event.quantity <= 0 || watch.event.date_and_time < Time.now - (24/24)%>
                   <% else %>
                   cop it
                   <% end %>
@@ -53,7 +52,7 @@
                 <div class=" price">
                   <% ticket_price_array = [] %>
                   <% watch.event.tickets.each do |ticket| %>
-                    <% if ticket.sold == false  %>
+                    <% if ticket.sold == false && watch.event.date_and_time > Time.now - (24/24) %>
                       <% ticket_price_array << ticket.pricing %>
                     <% end %>
                   <% end %>
@@ -64,6 +63,8 @@
                   <div class="events-left">
                     <% if watch.event.quantity <= 0 %>
                     <p class="sold-out-text"> Sold out </p>
+                    <% elsif watch.event.date_and_time < Time.now - (24/24) %>
+                    <p class='sold-out-text'>Expired</p>
                     <% else %>
                     <p><%= watch.event.quantity %> tix left</p>
                     <% end %>
