--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -5,6 +5,12 @@
   border-radius: 10px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
 }
+@media (max-width: 767px) {
+  .events-search-bar {
+    box-shadow: none;
+    padding: 2px;
+  }
+}
 .search {
   margin: 10px 0 20px 0;
   margin: auto;
@@ -12,6 +18,11 @@
   color: $green;
   font-size: 22px;
   width: -webkit-fill-available;
+}
+@media (max-width: 767px) {
+  .search {
+    font-size: 16px;
+  }
 }
 .home-search {
   background-color: $light-gray;
