--- a/app/assets/stylesheets/components/_dashboard_listings.scss
+++ b/app/assets/stylesheets/components/_dashboard_listings.scss
@@ -191,8 +191,13 @@
   font-weight: bolder;
 }
 .posted-on-text{
-  font-size: 14px;
-  padding-left: 10px;
+  font-size: 12px;
+  padding-left: 6px;
+}
+@media (max-width: 767px) {
+  .posted-on-text{
+    font-size: 10px;
+  }
 }
 .booking-ticket-date{
   font-size:14px;
@@ -254,7 +259,7 @@ button{
 }
 
 .ticket-event-address-text{
-    font-size: 14px;
+  font-size: 14px;
 }
 @media (max-width: 767px) {
   .ticket-event-address-text{
@@ -263,9 +268,9 @@ button{
 }
 
 .dashboard-left.listing{
-      display: table-cell;
-    vertical-align: top;
-    border-right: 0.5px solid #CFD4D9;
+  display: table-cell;
+  vertical-align: top;
+  border-right: 0.5px solid #CFD4D9;
 }
 
 
