--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -3,7 +3,7 @@
   <div class="banner-venue">
     <div class="tickets-for-event-text">
 
-      <h1 class='space-around-text lightslategrey'><%= @event.name %></h1>
+      <h2 class='space-around-text green'><%= @event.name.capitalize %></h2>
         <i class="fas fa-calendar-alt"></i><strong><%= @event.date_and_time.strftime('%a %d %b').upcase %></strong>
         <i class="fas fa-map-marker"></i><strong><%= @venue %>, <%= @event.city %></strong>
     </div>
