--- a/app/views/pages/_dashboard-watching.html.erb
+++ b/app/views/pages/_dashboard-watching.html.erb
@@ -32,7 +32,7 @@
               <div class="dashboard-description">
                 <div class="dashboard-description-container">
                   <div class="dashboard-link-to-show-page">
-                    <p><%= link_to watch.event.name, event_path(watch.event_id) %></p>
+                    <p><%= link_to watch.event.name.capitalize, event_path(watch.event_id) %></p>
                   </div>
                   <div class="dashboard-details">
                     <p><%= watch.event.address %></p>
