--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="home-page">
-  <div class="banner-content-container banner" style="background-image: linear-gradient(-180deg, rgba(38,38,38,1)5%, rgba(255,255,255,0) 100%), url('https://images.unsplash.com/photo-1483101974978-cf266fdf1139?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=250711afae03c79108409b3e0fa17862&auto=format&fit=crop&w=2389&q=80');">
+  <div class="banner-content-container banner" style="background-image: linear-gradient(-180deg, rgba(38,38,38,1)5%, rgba(255,255,255,0) 100%), url('https://images.unsplash.com/photo-1470229722913-7c0e2dbbafd3?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=fb2264421ec008a297430e9e25f94eb3&auto=format&fit=crop&w=1650&q=80');">
     <div class="banner-content">
       <h1>UniTixHub</h1>
       <h2>Buy and Sell tickets. Exclusively for Uni Students.</h2>
@@ -32,7 +32,7 @@
                     </div>
                   </div>
                   <div class="event-card-content ">
-                    <p class='darkslategrey'><%= event.name %></p>
+                    <p class='green'><%= event.name.capitalize %></p>
                     <p class='lightslategrey'><i class="fas fa-map-marker-alt lightslategrey" style='padding-right:10px;'></i><%= event.city %></p>
                   </div>
                 <% end %>
@@ -85,7 +85,7 @@
     </div>
     <div class="footer-copyright">
       <i class="fa fa-heart"></i>
-      <span class='footer-text'>UniTix © Ben, Amresh, Cheryl 2018</span>
+      <span class='footer-text'>UniTixHub © Ben, Amresh, Cheryl</span>
     </div>
   </div>
 
