--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,23 +4,35 @@
     <div class="tickets-for-event-text">
 
       <h2 class='space-around-text green'><%= @event.name.capitalize %></h2>
-        <i class="fas fa-calendar-alt"></i><strong><%= @event.date_and_time.strftime('%a %d %b').upcase %></strong>
+        <i class="fas fa-calendar-alt"></i><strong><%= @event.date_and_time.strftime('%a %d %b %Y').upcase %></strong>
         <i class="fas fa-map-marker"></i><strong><%= @venue %>, <%= @event.city %></strong>
     </div>
 
+    <% if @event.date_and_time > Time.now - (24/24) %>
+
       <div class="available-tickets-text">
         <% if @event.quantity == 0 %>
-        <p>Sorry, there are no tickets currently available! </p>
+        <p class='darkgray'>Oh no! Sorry there are no tickets currently available! <i class="far fa-frown"></i></p>
         <% elsif @event.quantity == 1 %>
-        <p class='indianred'>Only <strong><%= @event.quantity %></strong> ticket remaining!</p>
+        <p class='indianred'>Be quick! Only <strong><%= @event.quantity %></strong> ticket remaining!</p>
+        <% elsif @event.quantity > 1 && @event.quantity <= 3%>
+        <p class='indianred'>Hurry! There are only <strong><%= @event.quantity %></strong> tickets for this event remaining.</p>
         <% else %>
-        <p class='cadetblue'>There are <strong><%= @event.quantity %></strong> tickets for this event remaining.</p>
+        <p class='cadetblue'>Woohoo! There are <strong><%= @event.quantity %></strong> tickets for this event remaining.</p>
         <% end %>
       </div>
 
+      <% else %>
+
+      <div class="event-expired-show indianred">
+        <h4>This event has expired</h4>
+      </div>
+
+    <% end %>
+
 
     <% if @event.quantity == 0 %>
-    <p class="available-tickets-text">Bookmark the event to be notified when tickets are available</p>
+    <p class="available-tickets-text darkgray">Bookmark the event to see when tickets become available</p>
 
     <% else %>
     <div class="container-upcoming-tickets">
