--- a/app/views/pages/_dashboard-listings.html.erb
+++ b/app/views/pages/_dashboard-listings.html.erb
@@ -8,6 +8,7 @@
         <div class="container-header-section">
           <div class="container-header-text">
             <span class="results-query">
+              <i class="fas fa-clipboard-list", style = 'padding-right: 10px';></i>
               Here are your ticket listings
             </span>
             <span class="results-location-query">
