--- a/app/views/pages/_dashboard-purchases.html.erb
+++ b/app/views/pages/_dashboard-purchases.html.erb
@@ -9,6 +9,7 @@
         <div class="container-header-section">
           <div class="container-header-text">
             <span class="results-query">
+              <i class="fas fa-ticket-alt" , style = 'padding-right: 10px';></i>
               Here are your ticket purchases
             </span>
             <span class="results-location-query" >
