--- a/app/views/pages/_dashboard-watching.html.erb
+++ b/app/views/pages/_dashboard-watching.html.erb
@@ -9,8 +9,8 @@
         <div class="container-header-section">
           <div class="container-header-text">
             <span class="results-query">
+              <i class="fas fa-heart" style= 'color:red; padding-right: 10px;'></i>
               Keep an eye on your saved events
-              <i class="fas fa-heart" style= 'color:red'></i>
             </span>
 
           </div>
