--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -5,10 +5,10 @@
   border-radius: 10px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
 }
-@media (max-width: 767px) {
+@media (max-width: 1024px) {
   .events-search-bar {
     box-shadow: none;
-    padding: 2px;
+    padding: 2px 8px;
   }
 }
 .search {
