add existing ticket styling

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -77,3 +77,9 @@ $white: rgb(255,255,255);
 .cadetblue {
   color: cadetblue;
 }
+.darkslategrey{
+  color: darkslategrey;
+}
+.lightcoral {
+  color: lightcoral;
+}
