--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="banner-content-container banner" style="background-image: linear-gradient(-180deg, rgba(38,38,38,1)5%, rgba(255,255,255,0) 100%), url('https://images.unsplash.com/photo-1470229722913-7c0e2dbbafd3?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=fb2264421ec008a297430e9e25f94eb3&auto=format&fit=crop&w=1650&q=80');">
     <div class="banner-content">
       <h1>UniTixHub</h1>
-      <h2>Buy and Sell tickets. Exclusively for Uni Students.</h2>
+      <h2>Buy and Sell Tickets. Exclusively for Uni Students.</h2>
       <span id="banner-typed-text" class="typed-text"></span>
       <div class="buy-sell-btn">
         <%= link_to 'Buy Tickets', events_path, class: "green-black" %>
