--- a/app/assets/stylesheets/components/_dashboard_listings.scss
+++ b/app/assets/stylesheets/components/_dashboard_listings.scss
@@ -277,4 +277,12 @@ button{
   border-right: 0.5px solid #CFD4D9;
 }
 
+.fas.fa-trash-alt {
+  color: darkslategray;
+  &:hover {
+    color: darkslategray;
+    opacity: 0.8;
+  }
+}
+
 
