--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -31,9 +31,16 @@
                       <p class="<%= colour_filter(event.category) %>" style='font-weight:bold; margin: 5px; text-shadow: 0.5px 0.5px black;'><%= event.category %></p>
                     </div>
                   </div>
-                  <div class="event-card-content ">
-                    <p class='green'><%= event.name.capitalize %></p>
-                    <p class='lightslategrey'><i class="fas fa-map-marker-alt lightslategrey" style='padding-right:10px;'></i><%= event.city %></p>
+                  <div class="event-card-content-container">
+                    <div class="event-card-content ">
+                      <p class='green'><%= event.name.capitalize %></p>
+                      <p class='lightslategrey'><i class="fas fa-map-marker-alt lightslategrey" style='padding-right:10px;'></i><%= event.city %></p>
+                      <div class="event-watch-bookmark-toggle" style='position: absolute; right: 0px; bottom: 0px;'>
+                      <%= link_to event_watchlists_path(event), method: :post  do %>
+                        <div class="heart <%= 'heart-clicked' if !@watchlists.where(event: event).first.blank? %>"></div>
+                      <% end %>
+                      </div>
+                    </div>
                   </div>
                 <% end %>
               </div>
