added more cities

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -104,6 +104,7 @@
 
  <%= javascript_pack_tag "typejs" %>
  <%= javascript_pack_tag "ticket-search" %>
+ <%= javascript_pack_tag "event-index" %>
 
 
 
