--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -61,12 +61,17 @@
   color: $navbar-gray;
   border: 1px solid lightgrey;
   border-top: none;
-  padding: 0px 20px;
+  padding: 20px 15px;
   border-radius: 0 0 5px 5px;
-  padding-top: 15px;
-  font-size: 14px;
+  font-size: 16px;
   display: flex;
   position: relative;
+  min-height: 120px;
+}
+
+.location-container {
+  position: absolute;
+  bottom: 8px;
 }
 
 
